--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: '3.8'
 services:
+  docs:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: dev
   php-apache-environment:
     container_name: php-apache
     image: php:8.0-apache
     volumes:
-      - ./php/src:/var/www/html/
+      - ./php/src:/app
     ports:
-      - 8080:80
+      - 80:80
